log
Tue 26 Sep 2023 10:15:54 PM UTC: 
 tests:  0|4
total_score: 0/70
4c9ec14
Tue 26 Sep 2023 10:23:22 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:23:1: error: control reaches end of non-void function [-Werror=return-type]
   23 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8e2e156
Tue 26 Sep 2023 10:24:21 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:24:1: error: control reaches end of non-void function [-Werror=return-type]
   24 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
0021ac4
Tue 26 Sep 2023 10:24:46 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|4
total_score: 0/70
84b9cd8
Tue 26 Sep 2023 10:25:30 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
48a3277
Tue 26 Sep 2023 10:25:55 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
f421be0
Tue 26 Sep 2023 10:26:08 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
4b9484c
Tue 26 Sep 2023 10:26:15 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
4c5aeae
Tue 26 Sep 2023 10:26:27 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
c9979f1
Tue 26 Sep 2023 10:31:28 PM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
54e6a07
Tue 26 Sep 2023 10:36:51 PM UTC: 
 heap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  1|3
total_score: 10/70
1319288
Tue 26 Sep 2023 10:37:19 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
7f6f089
Tue 26 Sep 2023 10:38:57 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:35:18: error: ‘p’ undeclared (first use in this function)
   35 |   while(i > 0 && p > pq->heapArray[(i - 1) / 2].priority) {
      |                  ^
heap.c:35:18: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
f118e81
Tue 26 Sep 2023 10:39:09 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:35:18: error: ‘p’ undeclared (first use in this function)
   35 |   while(i > 0 && p > pq->heapArray[(i - 1) / 2].priority) {
      |                  ^
heap.c:35:18: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
7eac956
